--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
