--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
+    "@react-three/rapier": "^1.5.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -19,14 +22,16 @@
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "meshline": "^3.3.1",
     "pg": "^8.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
     "swiper": "^11.2.2",
+    "three": "^0.173.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
