--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "reactjs-popup": "^2.0.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.2",
     "three": "^0.173.0",
     "web-vitals": "^4.2.4"
