--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "meshline": "^3.3.1",
     "pg": "^8.13.1",
     "react": "^18.2.0",
