--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "meshline": "^3.3.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
